/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.2/userguide/building_java_projects.html
 */

plugins {
    id 'application'
    id 'eclipse'
}

java {
    sourceCompatibility = "17"
    targetCompatibility = "17"
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.13'
}

application {
    mainClass = 'javac.ecj.problems.App'
}

eclipse {
    classpath {
        file {
            whenMerged { classpath ->
                classpath.entries.findAll { it.kind == "con" && it.path.startsWith("org.eclipse.jdt.launching.JRE_CONTAINER") }.each { con ->
                    con.entryAttributes['add-exports'] = "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
                }
            }
        }
    }
}

run {
    jvmArgs = ['--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED']
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
    ]
}
